# alice_types

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.dev.txt  requirements.txt
.github/workflows/: tests.yml
alice_types/: __init__.py  analytics.py  buttons.py  cards.py  common.py  directives.py  entity.py  intents.py  interfaces.py  logger.py  markup.py  meta.py  mixin.py  nlu.py  request.py  response.py  session.py  slots.py  state.py  validators.py
alice_types/cards/: __init__.py  base.py  bigimage.py  gallery.py  itemslist.py
alice_types/directives/: __init__.py  account.py  audio.py
alice_types/request/: __init__.py  alice.py  audio.py  base.py  button.py  entity.py  intents.py  interfaces.py  markup.py  meta.py  nlu.py  purchase.py  session.py  show.py  simple.py  slots.py  state.py
alice_types/request/type/: alice.py  button.py  purchase.py  show.py  simple.py
alice_types/response/: __init__.py  alice.py  base.py  show.py
alice_types/response/cards/: base.py  bigimage.py  gallery.py  itemslist.py
alice_types/response/directives/: __init__.py  account.py  audio.py  main.py
alice_types/response/type/: __init__.py  alice.py  base.py  show.py
examples/: auth.py  base.py  buy_elephant.py
examples/extend_fields/: purchase.py  state.py
tests/: check.md  conftest.py  dataset.py  schemes.py  test_analytics.py  test_buttons.py  test_cards.py  test_directives.py  test_entities.py  test_intents.py  test_interfaces.py  test_markup.py  test_meta.py  test_nlu.py  test_request.py  test_response.py  test_session.py  test_state.py
