[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "alice-types"
version = "1.0"
authors = [
  { name="LazyDeus", email="dimaprodeus@yandex.ru" },
]
description = "Pydantic модели для протокола Алисы."
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "pydantic>=2.5.2,<3.0.0",
  "orjson>=3.9.10",
  "pytz>=2023.3.post1",
  "python-dateutil>=2.8.2,<3.0.0",
]

[project.urls]
"Homepage" = "https://github.com/Demetrous-fd/alice_types"
"Bug Tracker" = "https://github.com/Demetrous-fd/alice_types/issues"